Fix HBase version and remove deprecated JVM option
Co-authored-by: sunix <650571+sunix@users.noreply.github.com>